--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -1,12 +1,12 @@
 applications:
-- name: tracker-allocations
+- name: tracker-allocations4
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
-  - route: allocations-pal-{UNIQUE_IDENTIFIER}.apps.chicken.pal.pivotal.io
-  memory: 1G
+  - route: allocations-pal-eswar.apps.dev.pcf-aws.com
+  memory: 780M
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://FILL_ME_IN
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-eswar.apps.dev.pcf-aws.com
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
-  - tracker-allocations-database
+  - tracker-allocations-database3
