--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,7 +6,7 @@ applications:
   memory: 700M
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-eswar.apps.dev.pcf-aws.com
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-backlog-database3
+  - tracker-service-registry
