--- a/manifest-timesheets.yml
+++ b/manifest-timesheets.yml
@@ -3,10 +3,10 @@ applications:
   path: ./applications/timesheets-server/build/libs/timesheets-server.jar
   routes:
   - route: timesheets-pal-eswar.apps.dev.pcf-aws.com
-  memory: 1G
+  memory: 700M
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-eswar.apps.dev.pcf-aws.com
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
   - tracker-timesheets-database3
+  - tracker-service-registry
