--- a/manifest-registration.yml
+++ b/manifest-registration.yml
@@ -1,8 +1,8 @@
 applications:
-- name: tracker-registration
+- name: tracker-registration4
   path: ./applications/registration-server/build/libs/registration-server.jar
   routes:
-  - route: registration-pal-eswar.cfapps.io
+  - route: registration-pal-eswar.apps.dev.pcf-aws.com
   memory: 500M
   disk_quota: 500M
   instances: 1
@@ -10,5 +10,6 @@ applications:
     JAVA_OPTS: '-XX:MaxMetaspaceSize=80780K -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
     JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
   services:
-  - tracker-registration-database
+  - tracker-registration-database3
   - tracker-service-registry
+  - tracker-circuit-breaker-dashboard
