--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -3,8 +3,7 @@ applications:
   path: ./applications/allocations-server/build/libs/allocations-server.jar
   routes:
   - route: allocations-pal-eswar.apps.dev.pcf-aws.com
-  memory: 500M
-  disk_quota: 500M
+  memory: 1G
   instances: 1
   env:
     JAVA_OPTS: '-XX:MaxMetaspaceSize=80780K -Xss512k -Xmx200M -XX:ReservedCodeCacheSize=16M -XX:MaxDirectMemorySize=16M'
